# oracle-bip-client

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  agora.sh
datamodel/: taxes.xdm
src/: get_report.rs  get_xml_by_report.rs  main.rs  ollama_api.rs  save_to_db.rs  soap_operations.rs
tests/: ollama_api_tests.rs
